--- a/assets/typography.css
+++ b/assets/typography.css
@@ -15,6 +15,12 @@ h1{
     margin-bottom: 4rem;
 }
 
+.description2{
+    text-align: center;
+    font-style: italic;
+    font-size: 1em;
+}
+
 .epsilon{
     font-size: 1.2em;
     margin-left: 1rem;
